--- a/sass/variables-site/_colors.scss
+++ b/sass/variables-site/_colors.scss
@@ -21,8 +21,11 @@ $color__border-abbr: #666;
 
 $golden__grey: #404040;
 $golden__blue: #66B4B4;
+$golden_turq: #009999;
+$golden_coral: #ff6666;
 
 $color_lp_header: #404040;
 $color_lp_pink: #eb128f;
 $color_lp_accent: #c0fdde;
 $color_lp_orange: #fcd1a7;
+
